# duckgl

./: .gitignore  CMakeLists.txt  Makefile  README.md  build.sh  description.yml  extension_config.cmake  vcpkg.json
scripts/: embed_plotly.sh
src/: deckgl_extension.cpp  duckgl_extension.cpp
src/include/: deckgl_extension.hpp  duckgl_extension.hpp  httplib_wrapper.hpp
